// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: false, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: +0 } 1`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
  position: absolute;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: false, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: +0 } 2`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
  position: absolute;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 2`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: true, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: false, hideLabel: true, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 2`] = `
".label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: true, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: false, isLoading: true, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 2`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: true, isLoading: false, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getLabelStyles() > should return correct css for isDisabled: true, isLoading: false, hideLabel: false, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 2`] = `
".label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
@media(forced-colors:active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;
